--- a/base/static/administrar_enfermedades.html
+++ b/base/static/administrar_enfermedades.html
@@ -1,7 +1,7 @@
 {% extends "starter.html" %}
 {% load staticfiles %}
 {% block css %}
- 
+
   <style type="text/css">
   	.imagen{
   		width: 50px;
@@ -27,17 +27,66 @@
             </div>
 {% endblock %}
 {% block main %}
-<div class="page-title">
-              <div class="title_left">
-                <h3>Administración de enfermedades</h3>
-              </div>
+
+            <div class="col-md-6 panel panel-default">
+              <form>
+                Código:<br>
+                <input type="text" name="firstname"><br>
+                Nombre:<br>
+                <input type="text" name="lastname"><br>
+                Causas:<br>
+                <input type="TextArea" name="firstname"><br>
+                Tratamiento:<br>
+                <input type="TextArea" name="lastname"><br>
+              </form>
             </div>
+
+            <div class="col-md-6 panel panel-default">
+              <div class="box-body">
+
+              <div class="panel-heading">
+                  <h3>Síntomas</h3>
+              </div>
+
+                <div id="test-list" class="panel-body ">
+
+                    <div class="panel-group checkbox list ">
+
+                    {% for signo in signos_generales %}
+                    <label class="ancho-total ">
+                      <input type="checkbox" value="{{signo.identificador}}">
+
+                      <div class="panel panel-default">
+                        <a data-toggle="collapse" href="#{{signo.identificador}}">
+                          <div class="panel-heading fondo-celeste">
+                            <h4 class="panel-title">
+                              {{signo.nombre}}
+                            </h4>
+                          </div>
+                        </a>
+                        <div id="{{signo.identificador}}" class="panel-collapse collapse">
+                          <div class="panel-body">{{signo.explicacion}}</div>
+                        </div>
+
+                      </div>
+
+                    </label>
+
+                    {% endfor %}
+
+                    </div>
+                    <ul class="pagination"></ul>
+                </div>
+                
+                </div>
+            </div>
+
 {% endblock %}
 {% block js %}
 <!-- Datateble -->
     <script src="{% static 'vendors/datatables.net-buttons/js/dataTables.buttons.min.js' %}"></script>
     <script src="{% static 'vendors/datatables.net/js/jquery.dataTables.min.js' %}"></script>
     <script type="text/javascript">
-    	
+
     </script>
 {% endblock %}
