--- a/base/static/starter.html
+++ b/base/static/starter.html
@@ -132,6 +132,15 @@
 
         <!-- page content -->
         <div class="right_col" role="">
+        {% block dirs%}
+        <section class="content-header pull-right">
+      
+      <ol class="breadcrumb">
+        <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
+        <li class="active">Dashboard</li>
+      </ol>
+    </section>
+    {% endblock %}
           <div class="content-wrapper">
           
             <div class="page-title">
