--- a/base/static/starter.html
+++ b/base/static/starter.html
@@ -29,7 +29,7 @@
         <div class="col-md-3 left_col">
           <div class="left_col scroll-view">
             <div class="navbar nav_title" style="border: 0;">
-              <a href="index.html" class="site_title"><i class="fa fa-stethoscope"></i> <span>Diagnóstico</span></a>
+              <a class="site_title"><i class="fa fa-stethoscope"></i> <span>Diagnóstico</span></a>
             </div>
 
             <div class="clearfix"></div>
