--- a/base/static/diagnostico.html
+++ b/base/static/diagnostico.html
@@ -24,6 +24,10 @@
     .oculto{
       display: none;
     }
+    .modal-body{
+        max-height: 500px;
+        overflow-y: auto;
+    }
   </style>
 {% endblock %}
 
